tmux.conf .bashrc

--- a/.tmux/.tmux.conf
+++ b/.tmux/.tmux.conf
@@ -17,27 +17,17 @@ set -g prefix C-a
 unbind C-b
 bind C-a send-prefix
 
-# Set a shortcut for reloading tmux config
-#bind r source-file ~/.tmux.conf
-#Hit prefix + I to fetch the plugin and source it. You should now be able to use the plugin.
+# reload tmux config
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
 bind F7 set -g prefix C-b
 bind F8 set -g prefix `
 
-# Rename terminals
-set -g set-titles on
-set -g set-titles-string '#(whoami)@#h:#W'
-set-option -g set-titles-string '[#S:#I #H] #W'
-set -g set-titles-string "#H / #S"
+# rename terminals
+#set -g set-titles on
+set-option -g set-titles-string '#S:#I #(whoami)@#H #W'
 ## `#h` is $(hostname -s)
 ## `#W` is Window name
-
-
-# If running inside tmux ($TMUX is set), then highlight
-%if #{TMUX}
-set -g status-bg red
-%endif
 
 ## Keep windows around after they exit
 ##set -g remain-on-exit on
@@ -85,7 +75,9 @@ bind y set synchronize-panes\; display 'synchronize-panes #{?synchronize-panes,o
 ###neww -d
 ###neww
 
-bind z kill-session
+bind z confirm kill-session
+bind q confirm kill-window
+bind Q confirm kill-server
 bind h select-layout even-horizontal
 bind v select-layout even-vertical
 
@@ -110,8 +102,7 @@ bind -r l select-pane -R
 
 # L           Switch the attached client back to the last session.
 # toggling windows with ctrl+a ctrl+a
-bind C-a last-window
-#bind ^g last-window
+#bind g last-window # default
 
 bind g select-window -l
 #TODO: to clear in bash VI mode
@@ -150,7 +141,10 @@ bind g select-window -l
 # q           Briefly display pane indexes.
 # :           Enter the tmux command prompt.
 # ?           List all key bindings.
+#
+# vi copy-mode
 # [           Enter copy mode to copy text or view the history.
+
 # Page Up     Enter copy mode and scroll one page up.
 # Up, Down
 # Left, Right
@@ -194,7 +188,7 @@ set -g default-terminal "screen-256color"
 bind '~' split-window "exec htop"
 bind m command-prompt "split-window 'exec man %%'"
 
-# split panes using | and -
+# split panes using | and -, default: v and xx??
 #unbind '"'
 bind - split-window -v
 #unbind '%'
@@ -271,6 +265,9 @@ if '[ -z "$DISPLAY" -o -n "$SSH_CONNECTION" ]' 'set -g status-right-length 180'
 # %b month name
 # %p AM/PM
 
+# window-status-current-* for active window
+# window-status-* for default window
+
 #setw -g window-status-format "#[fg=colour0, bg=colour4]#I###W #[fg=colour0]⮁"
 #setw -g window-status-current-format "#[fg=colour7, bg=colour4]#I###W #[fg=colour0]⮁"
 setw -g window-status-format " #F#I:#W#F "
@@ -279,8 +276,11 @@ setw -g window-status-current-format "#[fg=colour8] #I #[fg=colour8] #W "
 setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F '
 setw -g window-status-current-format " #F#I:#W#F "
 setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
-set -g status-bg colour238 #base02
-set -g status-fg colour136
+#set -g status-fg colour136
+#set -g status-bg colour238 #base02
+
+# transparent
+set status-bg default
 
 ##This isn't needed with `tmux` 2.4 or newer.
 #set -g @shell_mode 'vi'
@@ -358,6 +358,49 @@ bind ^p pasteb
 #bind -T vi-copy y copy-selection
 #bind -Tcopy-mode-vi y send -X copy-selection
 
+# If running inside tmux ($TMUX is set), then highlight
+%if #{TMUX}
+set -g status-bg red
+%endif
+
+#### COLOUR (Gotham)
+# default statusbar colors
+set-option -g status-bg colour8
+set-option -g status-fg colour11
+set-option -g status-attr none
+
+# default window title colors
+set-window-option -g window-status-fg colour14
+set-window-option -g window-status-bg colour8
+#set-window-option -g window-status-attr dim
+set-window-option -g window-status-separator ""
+
+# active window title colors
+set-window-option -g window-status-current-fg colour14
+set-window-option -g window-status-current-bg colour8
+#set-window-option -g window-status-current-attr bright
+
+set-window-option -g window-status-activity-bg colour8
+set-window-option -g window-status-activity-attr none
+set-window-option -g window-status-activity-fg colour4
+
+# pane border
+set-option -g pane-border-fg colour10
+set-option -g pane-active-border-fg colour4
+
+# message text
+set-option -g message-bg colour10
+set-option -g message-fg colour14
+set-option -g message-command-bg colour10
+set-option -g message-command-fg colour14
+
+# pane number display
+set-option -g display-panes-active-colour colour8
+set-option -g display-panes-colour colour14
+
+# clock
+set-window-option -g clock-mode-colour colour40 #green
+#### COLOUR (Gotham)
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
@@ -382,3 +425,4 @@ set -g @continuum-restore 'on'
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
 #run-shell ~/.tmux/plugins/tmux-resurrect/resurrect.tmux
+
