--- a/.tmux/.tmux.conf
+++ b/.tmux/.tmux.conf
@@ -10,6 +10,7 @@
 
 # jump to the beginning of the line
 bind a send-prefix
+# bind-key a send-prefix
 bind ` send-prefix
 
 # Change the prefix key
@@ -17,8 +18,8 @@ set -g prefix C-a
 unbind C-b
 bind C-a send-prefix
 
-# reload tmux config
-bind r source-file ~/.tmux.conf \; display "Reloaded!"
+# reload config
+bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
 
 bind F7 set -g prefix C-b
 bind F8 set -g prefix `
@@ -104,6 +105,12 @@ bind -r l select-pane -R
 # toggling windows with ctrl+a ctrl+a
 #bind g last-window # default
 
+# If running inside tmux ($TMUX is set), then highlight
+%if #{TMUX}
+set-window-option -g window-status-current-style bg=brightred
+#set-window-option -g window-status-current-style bg=bright,red
+%endif
+
 bind g select-window -l
 #TODO: to clear in bash VI mode
 
@@ -165,14 +172,8 @@ set -ga terminal-overrides ',xterm*:smcup@:rmcup@'
 
 #This tricks the terminal emulator into thinking Tmux is a full screen application like pico or mutt[2], which will make the scrollback be recorded properly. Beware however, it will get a bit messed up when switching between windows/panes. Consider using Tmux's native scrollback instead.
 
-# Works in copy-mode with scrollback with `prefix + [`
-# To exit copy-mode, press q in vi mode or ESC in emacs mode;
-#   or `Enter` or `Ctrl-C` in either mode
-
 #Set the esc/alt disambiguation timeout
 set -sg escape-time 10
-#      - See https://github.com/neovim/neovim/wiki/FAQ
-
 #  - ERROR: $TERM should be "screen-256color" or "tmux-256color" when running tmux.
 #    - SUGGESTIONS:
 #      - Set default-terminal in ~/.tmux.conf:
@@ -181,9 +182,9 @@ set -sg escape-time 10
 # Not working with "tmux-256color"
 # Not working with "tmux+256color"
 #      - See https://github.com/neovim/neovim/wiki/FAQ
-set -g default-terminal "tmux-256color"
+#set -g default-terminal "tmux-256color"
+#set -g default-terminal "screen-256color"
 set -g default-terminal "xterm-256color"
-set -g default-terminal "screen-256color"
 
 bind '~' split-window "exec htop"
 bind m command-prompt "split-window 'exec man %%'"
@@ -225,85 +226,21 @@ bind -n F1 list-keys
 # make the first window number start at 1
 set -g base-index 1
 
-# don't rename windows automatically
-set-option -g allow-rename off
-
 #set -g default-command zsh
 
 #set-environment -g LC_TMUX_SESSION 1
 
-# -- Status bar ---------------------------------------------------------{{{1
-#set -g status-position top
-#setw -g status-position top
-set -g status-position bottom
-#setw -g mode-keys vi
-setw -g mode-keys vi
-set -g status-keys vi
-
-set -g status-interval 5               # set update frequencey (default 15 seconds)
-#set -g status-justify left
-set -g status-justify centre
-
-# host info
-set -g status-left-length 80
-set -g status-left "#S@#H #(curl icanhazip.com) #(ip a show tun0 | grep 'inet ' | awk '{print \"vpn \" $2}') "
-# #h host
-# #H FQDN host
-# show session name, window & pane number, date and time on right side
-#set -g status-right "⮃ #(~/.myconf/tmuxstatusline.sh)"
-set -g status-right "#[fg=blue]#(tmux-cpu --no-color)"
-set -g status-right "#[fg=Cyan,Bright]#(cat /proc/loadavg | cut -d \" \" -f 1,2,3) %V.%u %m%d %R"
-set -g status-right "#I:#P : %d/%m %H:%M:%S"
-#show-options -g
-set -g status-right-length 80
-if '[ -z "$DISPLAY" -o -n "$SSH_CONNECTION" ]' 'set -g status-right-length 180'
-
-# %H 24-hour hour
-# %l 12-hour hour
-# %d day of month
-# %m month of year
-# %b month name
-# %p AM/PM
-
-# window-status-current-* for active window
-# window-status-* for default window
-
-#setw -g window-status-format "#[fg=colour0, bg=colour4]#I###W #[fg=colour0]⮁"
-#setw -g window-status-current-format "#[fg=colour7, bg=colour4]#I###W #[fg=colour0]⮁"
-setw -g window-status-format " #F#I:#W#F "
-setw -g window-status-format "#[fg=magenta]#I #[fg=colour8] #W "
-setw -g window-status-current-format "#[fg=colour8] #I #[fg=colour8] #W "
-setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F '
-setw -g window-status-current-format " #F#I:#W#F "
-setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
-#set -g status-fg colour136
-#set -g status-bg colour238 #base02
-
-# transparent
-set status-bg default
-
-##This isn't needed with `tmux` 2.4 or newer.
-#set -g @shell_mode 'vi'
 
 # Turn the mouse on, but without copy mode dragging
 set -g mouse off
 unbind -n MouseDrag1Pane
 unbind -Tcopy-mode MouseDrag1Pane
-##setw -g mode-mouse on
+
 ## set -g mouse-resize-pane on
 ## set -g mouse-select-pane on
 ## set -g mouse-select-window on
 #bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
 #bind -n WheelDownPane select-pane -t= \; send-keys -M
-
-# modes {
-#window mode
-setw -g clock-mode-colour colour135
-# }
-
-## Highlight current pane
-set -g window-active-style 'fg=colour255,bg=colour232'  # Current pane
-set -g window-style 'fg=colour7,bg=colour234'   # Other panes
 
 # messages {
 set -g display-time 5000
@@ -324,12 +261,73 @@ bind -n F8 select-window -t 8
 #bind : command-prompt
 
 #bind-key -> bind
-#source -> source-file
 #set-window -> setw
 #setw -> set
-#attr -> style
+
+# %H 24-hour hour
+# %l 12-hour hour
+# %d day of month
+# %m month of year
+# %b month name
+# %p AM/PM
+
+# $ tmux set -g status-style fg=red
+# $ tmux set -g window-status-style fg=blue
+# $ tmux set -g window-status-current-style fg=green
+# $ tmux renamew '#[fg=white]white#[fg=default]default'
+
+# status bar
+# set-option -g status-utf8 on
+# default start/restart
+#select-window -t 1
+
+# gobust
+# revshell
+
+# vim copy mode
+set-window-option -g mode-keys vi
+bind P paste-buffer
+bind -T copy-mode-vi v send-keys -X begin-selection
+bind -T copy-mode-vi y send-keys -X copy-selection
+bind -T copy-mode-vi r send-keys -X rectangle-toggle
+
+# Works in copy-mode with scrollback with `prefix + [`
+# To exit copy-mode, press q in vi mode or ESC in emacs mode;
+#   or `Enter` or `Ctrl-C` in either mode
+
+bind Escape copy-mode
+bind ^p pasteb
+
+#Print Default Setting Values
+#tmux -Lfoo -f/dev/null start\; show -gw
+#Print Current Setting Values
+#tmux -Lfoo -f/dev/null start\; show -g
+
+
+# style options:
+             # message-command-style style
+             # message-style style
+             # mode-style style
+             # pane-active-border-style style
+             # pane-border-style style
+             # status-left-style style
+             # status-right-style style
+             # status-style style
+             # window-active-style style
+             # window-status-activity-style style
+             # window-status-bell-style style
+             # window-status-current-style style
+             # window-status-last-style style
+             # window-status-style style
+             # window-style style
+#The form is exactly the same, it is just one option instead of three:
+#set -g mode-style bg=red,fg=green,blink
+
+# Before tmux 1.9, styles (the colours and attributes of various things) were each configured with three options - one for the foreground colour (such as mode-fg), one for the background (such as mode-bg) and one for the attributes (such as mode-attr).
+#In tmux 1.9 each set of three options were combined into a single option (so mode-fg, mode-bg and mode-attr became mode-style) and in tmux 2.9 the old options were removed.
 
 # colors
+## https://upload.wikimedia.org/wikipedia/commons/1/15/Xterm_256color_chart.svg
 ## black:  colour232
 ## white:  colour255
 ## dark-gray:  colour234
@@ -337,70 +335,144 @@ bind -n F8 select-window -t 8
 ## highlights: colour14
 ## attention: colour202
 ## decoration: colour12
+GRAY="#808080"
+BLUE="#569CD6"
+DARK_BLUE="#223E55"
+RED="#EE4646"
+YELLOW="#CCCC99"
+BACKGROUND="#000000"
+FOREGROUND="#CCCCCC"
 
-# default start/restart
-#select-window -t 1
+# -- Status bar ---------------------------------------------------------{{{1
+#setw -g status-position top
+set -g status-position bottom
+set -g status-keys vi
 
-# gobust
-# revshell
+set -g status-interval 3          # set update frequencey (default 15 seconds)
+#set -g status-justify left
+set -g status-justify centre
+
+#put multiple attribute on the same line separated with a comma.
+set-option -g status-style bg=colour235,fg=yellow,dim #colour136 #yellow
+set -g status-style bg=$BACKGROUND,fg=$BLUE
+# https://github.com/seebi/tmux-colors-solarized/blob/master/tmuxcolors-256.conf
+
+# transparent ??
+#set default
+#set-option -g status-style none
+#}}}
 
 
-# vim copy mode
-bind P paste-buffer
-bind -T copy-mode-vi v send-keys -X begin-selection
-bind -T copy-mode-vi y send-keys -X copy-selection
-bind -T copy-mode-vi r send-keys -X rectangle-toggle
-
-bind Escape copy-mode
-bind ^p pasteb
-#bind -T vi-copy v begin-selection
-#bind -Tcopy-mode-vi v send -X begin-selection
-#bind -T vi-copy y copy-selection
-#bind -Tcopy-mode-vi y send -X copy-selection
-
-# If running inside tmux ($TMUX is set), then highlight
-%if #{TMUX}
-set -g status-bg red
-%endif
-
-#### COLOUR (Gotham)
-# default statusbar colors
-set-option -g status-bg colour8
-set-option -g status-fg colour11
-set-option -g status-attr none
-
-# default window title colors
-set-window-option -g window-status-fg colour14
-set-window-option -g window-status-bg colour8
-#set-window-option -g window-status-attr dim
+# Panes ---------------------------------------------------------{{{1
+set -g pane-border-style fg=$DARK_BLUE # colour235
+set -g pane-active-border-style fg=$BLUE #colour236
+set -g window-style 'fg=colour247,bg=colour236'
+set -g window-style 'fg=colour7,bg=colour234'   # Other panes
+#set -g window-status-separator " "
 set-window-option -g window-status-separator ""
-
-# active window title colors
-set-window-option -g window-status-current-fg colour14
-set-window-option -g window-status-current-bg colour8
-#set-window-option -g window-status-current-attr bright
-
-set-window-option -g window-status-activity-bg colour8
-set-window-option -g window-status-activity-attr none
-set-window-option -g window-status-activity-fg colour4
-
-# pane border
-set-option -g pane-border-fg colour10
-set-option -g pane-active-border-fg colour4
+# pane number display
+set-option -g display-panes-active-colour colour33 #blue
+set-option -g display-panes-colour colour166 #orange
 
 # message text
-set-option -g message-bg colour10
-set-option -g message-fg colour14
-set-option -g message-command-bg colour10
-set-option -g message-command-fg colour14
+set-option -g message-style fg=colour14,bg=colour166 #orange
+set-option -g message-command-style bg=colour14
+#}}}
 
-# pane number display
-set-option -g display-panes-active-colour colour8
-set-option -g display-panes-colour colour14
+# Windows ---------------------------------------------------------{{{1
+# don't rename windows automatically
+set-option -g allow-rename off
 
+#setw -g window-status-format "#[fg=colour0, bg=colour4]#I###W #[fg=colour0]⮁"
+#setw -g window-status-current-format "#[fg=colour7, bg=colour4]#I###W #[fg=colour0]⮁"
+setw -g window-status-format "#[fg=magenta]#I #[fg=colour8] #W "
+setw -g window-status-current-format "#[fg=colour8] #I #[fg=colour8] #W "
+setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F '
+setw -g window-status-current-format " #F#I:#W#F "
+setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
+setw -g window-status-format " #F#I:#W#F "
+#window-status-current-format "#I:#W#{?window_flags,#{window_flags}, }"
+#window-status-format "#I:#W#{?window_flags,#{window_flags}, }"
+set -g window-status-activity-style fg=$RED,bg=colour8,bright
+#set-window-option -g window-status-activity-style none
+#window-status-activity-style reverse
+##This isn't needed with `tmux` 2.4 or newer.
+#set -g @shell_mode 'vi'
+#}}}
+
+set -g window-status-bell-style fg=$YELLOW
+#window-status-bell-style reverse
+#window-status-last-style default
+
+
+# window title list colors
+#bg=$BACKGROUND,fg=$GRAY
+set-window-option -g window-status-style fg=brightblue,bg=colour236,dim
+set-window-option -g window-status-style dim
+
+set -g window-active-style 'fg=colour250,bg=black'
+set-window-option -g window-status-current-style fg=brightred,bg=colour236,bright
+
+# Left Side #
+# host info
+# #h host
+# #H FQDN host
+set -g status-left-length 120
+set -g status-left "#(curl icanhazip.com)#(ip a show tun0 | grep 'inet ' | awk '{print \"vpn \" $2}') #[fg=green]#T #[fg=green,bright]#(uname -r | cut -c 1-6)#[default]"
+
+# Right Side #
+# session name, window & pane number, date and time on right side
+set -g status-right-length 250
+#set -g status-right "⮃ #(~/.myconf/tmuxstatusline.sh)"
+set -g status-right "#[fg=blue]#(tmux-cpu --no-color)"
+set -g status-right "#[fg=Cyan,Bright]#(cat /proc/loadavg | cut -d \" \" -f 1,2,3) %V.%u %m%d %R"
+set -g status-right '#[fg=green,bg=default,bright]#(tmux-mem-cpu-load 1) #[fg=red,dim,bg=default]#(uptime | cut -f 4-5 -d " " | cut -f 1 -d ",") #[fg=white,bg=default]%a %H:%M:%S #[fg=blue]%Y-%m-%d #S:#I:#P'
+#show-options -g
+if '[ -z "$DISPLAY" -o -n "$SSH_CONNECTION" ]' 'set -g status-right-length 180'
+
+# for the inactive window style to be applied to Vim panes, it is necessary to check the hi Normal
+#hi Normal guifg=#e6e1de ctermfg=7 guibg=#2b2b2b ctermbg=235 gui=none
+
+#The problem with this line is the two terms guibg= and ctermbg=235. If these terms are deleted, as in:
+#hi Normal           guifg=#e6e1de ctermfg=7 gui=none
+#or
+#hi Normal           guifg=#e6e1de ctermfg=none gui=none
+#then the inactive style will be applied to Vim panes
+# You need to configure vim to draw its background with the default colour
+# You need to configure vim to draw its background with the default colour
+#if the vim color theme apply a background color,
+#it is likely to ovverride the tmux-made pane background
+
+#What you can do is removing the black background in the vim theme and set it
+#to transparent ("NONE" instead of the color), maybe something like that:
+
+#hi Normal ctermfg=252 ctermbg=NONE
+
+ # Start numbering at 1
+ set -g base-index 1
+
+ # Allows for faster key repetition
+ set -s escape-time 0
+
+ # Rather than constraining window size to the maximum size of any client
+ # connected to the *session*, constrain window size to the maximum size of any
+ # client connected to *that window*. Much more reasonable.
+ setw -g aggressive-resize on
+
+ # Activity monitoring
+ setw -g monitor-activity off
+ set -g visual-activity off
+
+ # hjkl pane traversal
+ bind h select-pane -L
+ bind j select-pane -D
+ bind k select-pane -U
+ bind l select-pane -R
+
+# auto window rename
+set-window-option -g automatic-rename
 # clock
-set-window-option -g clock-mode-colour colour40 #green
-#### COLOUR (Gotham)
+set-window-option -g clock-mode-colour colour40 #colour135
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
@@ -418,6 +490,15 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 #tmux-continuum - automatic restoring and continuous saving of tmux env
 # set -g @plugin 'git@github.com/user/plugin'
 # set -g @plugin 'git@bitbucket.com/user/plugin'
+
+set -g @plugin 'christoomey/vim-tmux-navigator'
+#to conditionally bind the movement keys depending on the active command:
+# smart pane switching with awareness of vim splits
+bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-h) || tmux select-pane -L"
+bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-j) || tmux select-pane -D"
+bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-k) || tmux select-pane -U"
+bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
+bind -n C-\\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys 'C-\\') || tmux select-pane -l"
 
 # tmux-continuum
 set -g @continuum-restore 'on'
