--- a/.tmux/.tmux.conf
+++ b/.tmux/.tmux.conf
@@ -418,7 +418,7 @@ set-window-option -g window-status-current-style fg=brightred,bg=colour236,brigh
 # #h host
 # #H FQDN host
 set -g status-left-length 120
-set -g status-left "#(curl icanhazip.com)#(ip a show tun0 | grep 'inet ' | awk '{print \"vpn \" $2}') #[fg=green]#T #[fg=green,bright]#(uname -r | cut -c 1-6)#[default]"
+set -g status-left "#(curl icanhazip.com)#(ip a show tun0 | grep 'inet ' | awk '{print \"vpn \" $2}') #[fg=green]#T #[fg=green,bright]#[default]"
 
 # Right Side #
 # session name, window & pane number, date and time on right side
@@ -426,7 +426,7 @@ set -g status-right-length 250
 #set -g status-right "⮃ #(~/.myconf/tmuxstatusline.sh)"
 set -g status-right "#[fg=blue]#(tmux-cpu --no-color)"
 set -g status-right "#[fg=Cyan,Bright]#(cat /proc/loadavg | cut -d \" \" -f 1,2,3) %V.%u %m%d %R"
-set -g status-right '#[fg=green,bg=default,bright]#(tmux-mem-cpu-load 1) #[fg=red,dim,bg=default]#(uptime | cut -f 4-5 -d " " | cut -f 1 -d ",") #[fg=white,bg=default]%a %H:%M:%S #[fg=blue]%Y-%m-%d #S:#I:#P'
+set -g status-right '#[fg=green,bg=default,bright]#(tmux-mem-cpu-load 1) #[fg=red,dim,bg=default]#[fg=white,bg=default]%a %H:%M:%S #[fg=blue]%Y-%m-%d #S:#I:#P'
 #show-options -g
 if '[ -z "$DISPLAY" -o -n "$SSH_CONNECTION" ]' 'set -g status-right-length 180'
 
