--- a/.tmux/.tmux.conf
+++ b/.tmux/.tmux.conf
@@ -47,6 +47,20 @@ bind F10 selectw -t:19
 bind F11 selectw -t:20
 bind F12 selectw -t:21
 
+# Bind function keys.
+bind -n F3 select-window -t 3
+bind -n F4 select-window -t 4
+bind -n F5 select-window -t 5
+bind -n F6 select-window -t 6
+bind -n F7 select-window -t 7
+bind -n F8 select-window -t 8
+
+#bind : command-prompt
+
+#bind-key -> bind
+#set-window -> setw
+#setw -> set
+
 # A key to toggle between smallest and largest sizes if a window is visible in
 # multiple places
 bind F set -w window-size
@@ -183,8 +197,8 @@ set -sg escape-time 10
 # Not working with "tmux+256color"
 #      - See https://github.com/neovim/neovim/wiki/FAQ
 #set -g default-terminal "tmux-256color"
-#set -g default-terminal "screen-256color"
-set -g default-terminal "xterm-256color"
+#set -g default-terminal "xterm-256color"
+set -g default-terminal "screen-256color"
 
 bind '~' split-window "exec htop"
 bind m command-prompt "split-window 'exec man %%'"
@@ -248,22 +262,6 @@ set -g repeat-time 1000
 # }
 
 
-# Bind function keys.
-bind -n F1 select-window -t 1
-bind -n F2 select-window -t 2
-bind -n F3 select-window -t 3
-bind -n F4 select-window -t 4
-bind -n F5 select-window -t 5
-bind -n F6 select-window -t 6
-bind -n F7 select-window -t 7
-bind -n F8 select-window -t 8
-
-#bind : command-prompt
-
-#bind-key -> bind
-#set-window -> setw
-#setw -> set
-
 # %H 24-hour hour
 # %l 12-hour hour
 # %d day of month
@@ -291,12 +289,35 @@ bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-selection
 bind -T copy-mode-vi r send-keys -X rectangle-toggle
 
+
+# Nicholas Marriott:
+#   xclip does not close stdout when it is finished so tmux has no way to know it has finished and won't let the client process any more commands
+# https://wiki.archlinux.org/index.php/Tmux#X_clipboard_integration:
+#   It seems xclip does not close STDOUT after it has read from tmux's buffer. As such, tmux doesn't know that the copy task has completed, and continues to /await xclip's termination, thereby rendering the window manager unresponsive. To work around this, you can execute the command via run-shell -b instead of run, you can redirect STDOUT of xclip to /dev/null, or you can use an alternative command like xsel.
+
+
+
+
+
+# C-c: save into system clipboard (+). With preselection.
+# bind C-c run "tmux show-buffer | xsel -i -b"
+bind C-c run "tmux save-buffer - | xclip -i -sel clipboard > /dev/null"
+
+# C-v: copy from + clipboard.
+#bind C-v run "tmux set-buffer -- \"$(xsel -o -b)\"; tmux paste-buffe
+bind C-v run "tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer"
+
 # Works in copy-mode with scrollback with `prefix + [`
 # To exit copy-mode, press q in vi mode or ESC in emacs mode;
 #   or `Enter` or `Ctrl-C` in either mode
 
 bind Escape copy-mode
 bind ^p pasteb
+
+
+
+
+
 
 #Print Default Setting Values
 #tmux -Lfoo -f/dev/null start\; show -gw
@@ -426,7 +447,7 @@ set -g status-right-length 250
 #set -g status-right "⮃ #(~/.myconf/tmuxstatusline.sh)"
 set -g status-right "#[fg=blue]#(tmux-cpu --no-color)"
 set -g status-right "#[fg=Cyan,Bright]#(cat /proc/loadavg | cut -d \" \" -f 1,2,3) %V.%u %m%d %R"
-set -g status-right '#[fg=green,bg=default,bright]#(tmux-mem-cpu-load 1) #[fg=red,dim,bg=default]#[fg=white,bg=default]%a %H:%M:%S #[fg=blue]%Y-%m-%d #S:#I:#P'
+set -g status-right '#[fg=green,bg=default,bright]#(tmux-mem-cpu-load 1) #[fg=red,dim,bg=default]#[fg=white,bg=default]%a %H:%M:%S #S:#I:#P'
 #show-options -g
 if '[ -z "$DISPLAY" -o -n "$SSH_CONNECTION" ]' 'set -g status-right-length 180'
 
