--- a/.config/terminator/config
+++ b/.config/terminator/config
@@ -1,34 +1,444 @@
 [global_config]
-  title_transmit_bg_color = "#d30102"
   focus = system
+  window_state = fullscreen
+  borderless = True
+  broadcast_default = off
+  close_button_on_tab = False
+  title_transmit_fg_color = "#edd400"
+  title_transmit_bg_color = "#000000"
+  title_inactive_fg_color = "#f0f0f0"
+  title_inactive_bg_color = "#000000"
+  inactive_color_offset = 0.8629032258064516
+  enabled_plugins = InactivityWatch, ActivityWatch, TerminalShot, APTURLHandler, Logger
+  suppress_multiple_term_dialog = True
+  title_font = Noto Sans Mono CJK KR 10
 [keybindings]
+  go_up = <Alt>k
+  go_down = <Alt>j
+  go_left = <Alt>h
+  go_right = <Primary><Alt>l
+  rotate_cw = None
+  rotate_ccw = None
+  split_vert = <Primary><Shift>m
+  close_term = None
+  close_window = None
+  resize_up = None
+  resize_down = None
+  resize_left = None
+  resize_right = None
+  move_tab_right = None
+  move_tab_left = None
+  scaled_zoom = None
+  next_tab = <Primary>Tab
+  prev_tab = <Primary>Page_Up
+  switch_to_tab_1 = <Alt>1
+  switch_to_tab_2 = <Alt>2
+  switch_to_tab_3 = <Alt>3
+  switch_to_tab_4 = <Alt>4
+  reset = None
+  reset_clear = None
+  hide_window = None
+  group_all = None
+  group_all_toggle = <Alt>g
+  group_tab = None
+  group_tab_toggle = <Alt>t
+  new_terminator = <Primary><Shift>n
+  broadcast_off = None
+  broadcast_group = None
+  broadcast_all = None
+  insert_number = None
+  insert_padded = None
+  edit_window_title = <Primary><Alt>t
+  next_profile = <Primary><Alt>n
+  previous_profile = <Primary><Alt>p
+  help = None
 [profiles]
   [[default]]
-    # solarized-dark
-    #palette = "#073642:#dc322f:#859900:#b58900:#268bd2:#d33682:#2aa198:#eee8d5:#586e75:#cb4b16:#586e75:#657b83:#839496:#6c71c4:#93a1a1:#fdf6e3"
-    #foreground_color = "#eee8d5"
-    #background_color = "#002b36"
-    #cursor_color = "#eee8d5"
-
-  [[solarized-dark]]
-    palette = "#073642:#dc322f:#859900:#b58900:#268bd2:#d33682:#2aa198:#eee8d5:#586e75:#cb4b16:#586e75:#657b83:#839496:#6c71c4:#93a1a1:#fdf6e3"
-    foreground_color = "#eee8d5"
-    background_color = "#002b36"
-    cursor_color = "#eee8d5"
-
-  [[solarized-light]]
+    visible_bell = True
+    background_darkness = 0.94
+    background_type = transparent
+    cursor_color = "#aaaaaa"
+    font = Ubuntu Mono 10
+    foreground_color = "#00ff00"
+    show_titlebar = False
+    scrollbar_position = hidden
+    scrollback_infinite = True
+    disable_mousewheel_zoom = True
+    use_system_font = False
+    copy_on_selection = True
+  [[yummy]]
+    visible_bell = True
+    urgent_bell = True
+    background_color = "#282828"
+    background_darkness = 0.95
+    background_type = transparent
+    cursor_color = "#aaaaaa"
+    font = Anonymous Pro 11
+    foreground_color = "#ebdbb2"
+    show_titlebar = False
+    scrollbar_position = hidden
+    scrollback_infinite = True
     palette = "#073642:#dc322f:#859900:#b58900:#268bd2:#d33682:#2aa198:#eee8d5:#002b36:#cb4b16:#586e75:#657b83:#839496:#6c71c4:#93a1a1:#fdf6e3"
-    background_color = "#eee8d5"
-    foreground_color = "#002b36"
-    cursor_color = "#002b36"
-
+    login_shell = True
+    use_system_font = False
+    copy_on_selection = True
+  [[AlienBlood]]
+    background_color = "#0f1610"
+    cursor_color = "#73fa91"
+    font = Cascadia Mono 10
+    foreground_color = "#637d75"
+    show_titlebar = False
+    scrollbar_position = hidden
+    scrollback_infinite = True
+    palette = "#112616:#7f2b27:#2f7e25:#717f24:#2f6a7f:#47587f:#327f77:#647d75:#3c4812:#e08009:#18e000:#bde000:#00aae0:#0058e0:#00e0c4:#73fa91"
+  [[Argonaut]]
+    background_color = "#0e1019"
+    cursor_color = "#ff0018"
+    font = Cascadia Mono 10
+    foreground_color = "#fffaf4"
+    show_titlebar = False
+    scrollbar_position = hidden
+    scrollback_infinite = True
+    palette = "#232323:#ff000f:#8ce10b:#ffb900:#008df8:#6d43a6:#00d8eb:#ffffff:#444444:#ff2740:#abe15b:#ffd242:#0092ff:#9a5feb:#67fff0:#ffffff"
+  [[BelafonteNight]]
+    background_color = "#20111b"
+    cursor_color = "#968c83"
+    foreground_color = "#968c83"
+    show_titlebar = False
+    scrollbar_position = hidden
+    scrollback_infinite = True
+    palette = "#20111b:#be100e:#858162:#eaa549:#426a79:#97522c:#989a9c:#968c83:#5e5252:#be100e:#858162:#eaa549:#426a79:#97522c:#989a9c:#d5ccba"
+  [[Cobalt2]]
+    background_color = "#132738"
+    cursor_color = "#f0cc09"
+    foreground_color = "#ffffff"
+    show_titlebar = False
+    scrollbar_position = hidden
+    scrollback_infinite = True
+    palette = "#000000:#ff0000:#38de21:#ffe50a:#1460d2:#ff005d:#00bbbb:#bbbbbb:#555555:#f40e17:#3bd01d:#edc809:#5555ff:#ff55ff:#6ae3fa:#ffffff"
+  [[CrayonPonyFish]]
+    background_color = "#150707"
+    cursor_color = "#68525a"
+    foreground_color = "#68525a"
+    show_titlebar = False
+    scrollbar_position = hidden
+    scrollback_infinite = True
+    palette = "#2b1b1d:#91002b:#579524:#ab311b:#8c87b0:#692f50:#e8a866:#68525a:#3d2b2e:#c5255d:#8dff57:#c8381d:#cfc9ff:#fc6cba:#ffceaf:#b0949d"
+  [[DimmedMonokai]]
+    background_color = "#1f1f1f"
+    cursor_color = "#f83e19"
+    foreground_color = "#b9bcba"
+    show_titlebar = False
+    scrollbar_position = hidden
+    scrollback_infinite = True
+    palette = "#3a3d43:#be3f48:#879a3b:#c5a635:#4f76a1:#855c8d:#578fa4:#b9bcba:#888987:#fb001f:#0f722f:#c47033:#186de3:#fb0067:#2e706d:#fdffb9"
+  [[Dracula]]
+    background_color = "#1e1f29"
+    cursor_color = "#bbbbbb"
+    foreground_color = "#f8f8f2"
+    show_titlebar = False
+    scrollbar_position = hidden
+    scrollback_infinite = True
+    palette = "#000000:#ff5555:#50fa7b:#f1fa8c:#bd93f9:#ff79c6:#8be9fd:#bbbbbb:#555555:#ff5555:#50fa7b:#f1fa8c:#bd93f9:#ff79c6:#8be9fd:#ffffff"
+  [[DuotoneDark]]
+    background_color = "#1f1d27"
+    cursor_color = "#ff9839"
+    foreground_color = "#b7a1ff"
+    show_titlebar = False
+    scrollbar_position = hidden
+    scrollback_infinite = True
+    palette = "#1f1d27:#d9393e:#2dcd73:#d9b76e:#ffc284:#de8d40:#2488ff:#b7a1ff:#353147:#d9393e:#2dcd73:#d9b76e:#ffc284:#de8d40:#2488ff:#eae5ff"
+  [[Elemental]]
+    background_color = "#22211d"
+    cursor_color = "#facb80"
+    foreground_color = "#807a74"
+    show_titlebar = False
+    scrollbar_position = hidden
+    scrollback_infinite = True
+    palette = "#3c3c30:#98290f:#479a43:#7f7111:#497f7d:#7f4e2f:#387f58:#807974:#555445:#e0502a:#61e070:#d69927:#79d9d9:#cd7c54:#59d599:#fff1e9"
+    use_system_font = False
+  [[EspressoLibre]]
+    background_color = "#2a211c"
+    cursor_color = "#ffffff"
+    foreground_color = "#b8a898"
+    show_titlebar = False
+    scrollbar_position = hidden
+    scrollback_infinite = True
+    palette = "#000000:#cc0000:#1a921c:#f0e53a:#0066ff:#c5656b:#06989a:#d3d7cf:#555753:#ef2929:#9aff87:#fffb5c:#43a8ed:#ff818a:#34e2e2:#eeeeec"
+    use_system_font = False
+  [[Fideloper]]
+    background_color = "#292f33"
+    cursor_color = "#d4605a"
+    foreground_color = "#dbdae0"
+    show_titlebar = False
+    scrollbar_position = hidden
+    scrollback_infinite = True
+    use_system_font = False
+  [[Grape]]
+    background_color = "#171423"
+    cursor_color = "#a288f7"
+    foreground_color = "#9f9fa1"
+    show_titlebar = False
+    scrollbar_position = hidden
+    scrollback_infinite = True
+    palette = "#2d283f:#ed2261:#1fa91b:#8ddc20:#487df4:#8d35c9:#3bdeed:#9e9ea0:#59516a:#f0729a:#53aa5e:#b2dc87:#a9bcec:#ad81c2:#9de3eb:#a288f7"
+    use_system_font = False
+  [[Hurtado]]
+    cursor_color = "#bbbbbb"
+    foreground_color = "#dbdbdb"
+    show_titlebar = False
+    scrollbar_position = hidden
+    scrollback_infinite = True
+    palette = "#575757:#ff1b00:#a5e055:#fbe74a:#496487:#fd5ff1:#86e9fe:#cbcccb:#262626:#d51d00:#a5df55:#fbe84a:#89beff:#c001c1:#86eafe:#dbdbdb"
+    use_system_font = False
+  [[Japanesque]]
+    background_color = "#1e1e1e"
+    cursor_color = "#edcf4f"
+    foreground_color = "#f7f6ec"
+    show_titlebar = False
+    scrollbar_position = hidden
+    scrollback_infinite = True
+    palette = "#343935:#cf3f61:#7bb75b:#e9b32a:#4c9ad4:#a57fc4:#389aad:#fafaf6:#595b59:#d18fa6:#767f2c:#78592f:#135979:#604291:#76bbca:#b2b5ae"
+    use_system_font = False
+  [[LiquidCarbonTransparent]]
+    cursor_color = "#ffffff"
+    foreground_color = "#afc2c2"
+    show_titlebar = False
+    scrollbar_position = hidden
+    scrollback_infinite = True
+    palette = "#000000:#ff3030:#559a70:#ccac00:#0099cc:#cc69c8:#7ac4cc:#bccccc:#000000:#ff3030:#559a70:#ccac00:#0099cc:#cc69c8:#7ac4cc:#bccccc"
+    use_system_font = False
+  [[Misterioso]]
+    background_color = "#2d3743"
+    cursor_color = "#ff00ca"
+    foreground_color = "#e1e1e0"
+    show_titlebar = False
+    scrollbar_position = hidden
+    scrollback_infinite = True
+    palette = "#000000:#ff4242:#74af68:#ffad29:#338f86:#9414e6:#23d7d7:#e1e1e0:#555555:#ff3242:#74cd68:#ffb929:#23d7d7:#ff37ff:#00ede1:#ffffff"
+    use_system_font = False
+  [[MonokaiSoda]]
+    background_color = "#1a1a1a"
+    cursor_color = "#f6f7ec"
+    foreground_color = "#c4c5b5"
+    show_titlebar = False
+    scrollbar_position = hidden
+    scrollback_infinite = True
+    palette = "#1a1a1a:#f4005f:#98e024:#fa8419:#9d65ff:#f4005f:#58d1eb:#c4c5b5:#625e4c:#f4005f:#98e024:#e0d561:#9d65ff:#f4005f:#58d1eb:#f6f6ef"
+    use_system_font = False
+  [[Neopolitan]]
+    background_color = "#271f19"
+    cursor_color = "#ffffff"
+    foreground_color = "#ffffff"
+    show_titlebar = False
+    scrollbar_position = hidden
+    scrollback_infinite = True
+    palette = "#000000:#800000:#61ce3c:#fbde2d:#253b76:#ff0080:#8da6ce:#f8f8f8:#000000:#800000:#61ce3c:#fbde2d:#253b76:#ff0080:#8da6ce:#f8f8f8"
+    use_system_font = False
+  [[Neutron]]
+    background_color = "#1c1e22"
+    cursor_color = "#f6f7ec"
+    foreground_color = "#e6e8ef"
+    show_titlebar = False
+    scrollbar_position = hidden
+    scrollback_infinite = True
+    palette = "#23252b:#b54036:#5ab977:#deb566:#6a7c93:#a4799d:#3f94a8:#e6e8ef:#23252b:#b54036:#5ab977:#deb566:#6a7c93:#a4799d:#3f94a8:#ebedf2"
+    use_system_font = False
+  [[NightLionv2]]
+    background_color = "#171717"
+    cursor_color = "#bbbbbb"
+    foreground_color = "#bbbbbb"
+    show_titlebar = False
+    scrollbar_position = hidden
+    scrollback_infinite = True
+    palette = "#4c4c4c:#bb0000:#04f623:#f3f167:#64d0f0:#ce6fdb:#00dadf:#bbbbbb:#555555:#ff5555:#7df71d:#ffff55:#62cbe8:#ff9bf5:#00ccd8:#ffffff"
+    use_system_font = False
+  [[Ollie]]
+    background_color = "#222125"
+    cursor_color = "#5b6ea7"
+    foreground_color = "#8a8dae"
+    show_titlebar = False
+    scrollbar_position = hidden
+    scrollback_infinite = True
+    palette = "#000000:#ac2e31:#31ac61:#ac4300:#2d57ac:#b08528:#1fa6ac:#8a8eac:#5b3725:#ff3d48:#3bff99:#ff5e1e:#4488ff:#ffc21d:#1ffaff:#5b6ea7"
+    use_system_font = False
+  [[ParaisoDark]]
+    background_color = "#2f1e2e"
+    cursor_color = "#a39e9b"
+    foreground_color = "#a39e9b"
+    show_titlebar = False
+    scrollbar_position = hidden
+    scrollback_infinite = True
+    palette = "#2f1e2e:#ef6155:#48b685:#fec418:#06b6ef:#815ba4:#5bc4bf:#a39e9b:#776e71:#ef6155:#48b685:#fec418:#06b6ef:#815ba4:#5bc4bf:#e7e9db"
+    use_system_font = False
+  [[PiattoLight]]
+    background_color = "#ffffff"
+    cursor_color = "#5e77c8"
+    foreground_color = "#414141"
+    show_titlebar = False
+    scrollbar_position = hidden
+    scrollback_infinite = True
+    palette = "#414141:#b23771:#66781e:#cd6f34:#3c5ea8:#a454b2:#66781e:#ffffff:#3f3f3f:#db3365:#829429:#cd6f34:#3c5ea8:#a454b2:#829429:#f2f2f2"
+    use_system_font = False
+  [[Pro]]
+    cursor_color = "#4d4d4d"
+    foreground_color = "#f2f2f2"
+    show_titlebar = False
+    scrollbar_position = hidden
+    scrollback_infinite = True
+    palette = "#000000:#990000:#00a600:#999900:#2009db:#b200b2:#00a6b2:#bfbfbf:#666666:#e50000:#00d900:#e5e500:#0000ff:#e500e5:#00e5e5:#e5e5e5"
+    use_system_font = False
+  [[Rippedcasts]]
+    background_color = "#2b2b2b"
+    cursor_color = "#7f7f7f"
+    foreground_color = "#ffffff"
+    show_titlebar = False
+    scrollbar_position = hidden
+    scrollback_infinite = True
+    palette = "#000000:#cdaf95:#a8ff60:#bfbb1f:#75a5b0:#ff73fd:#5a647e:#bfbfbf:#666666:#eecbad:#bcee68:#e5e500:#86bdc9:#e500e5:#8c9bc4:#e5e5e5"
+    use_system_font = False
+  [[SeafoamPastel]]
+    background_color = "#243435"
+    cursor_color = "#57647a"
+    foreground_color = "#d4e7d4"
+    show_titlebar = False
+    scrollbar_position = hidden
+    scrollback_infinite = True
+    palette = "#757575:#825d4d:#728c62:#ada16d:#4d7b82:#8a7267:#729494:#e0e0e0:#8a8a8a:#cf937a:#98d9aa:#fae79d:#7ac3cf:#d6b2a1:#ade0e0:#e0e0e0"
+    use_system_font = False
+  [[Shaman]]
+    background_color = "#001015"
+    cursor_color = "#4afcd6"
+    foreground_color = "#405555"
+    show_titlebar = False
+    scrollbar_position = hidden
+    scrollback_infinite = True
+    palette = "#012026:#b2302d:#00a941:#5e8baa:#449a86:#00599d:#5d7e19:#405555:#384451:#ff4242:#2aea5e:#8ed4fd:#61d5ba:#1298ff:#98d028:#58fbd6"
+    use_system_font = False
+  [[SolarizedDarcula]]
+    background_color = "#3d3f41"
+    cursor_color = "#708284"
+    foreground_color = "#d2d8d9"
+    show_titlebar = False
+    scrollbar_position = hidden
+    scrollback_infinite = True
+    palette = "#25292a:#f24840:#629655:#b68800:#2075c7:#797fd4:#15968d:#d2d8d9:#25292a:#f24840:#629655:#b68800:#2075c7:#797fd4:#15968d:#d2d8d9"
+    use_system_font = False
+  [[SolarizedDarkHigherContrast]]
+    background_color = "#001e27"
+    cursor_color = "#f34b00"
+    foreground_color = "#9cc2c3"
+    show_titlebar = False
+    scrollbar_position = hidden
+    scrollback_infinite = True
+    palette = "#002831:#d11c24:#6cbe6c:#a57706:#2176c7:#c61c6f:#259286:#eae3cb:#006488:#f5163b:#51ef84:#b27e28:#178ec8:#e24d8e:#00b39e:#fcf4dc"
+    use_system_font = False
+  [[SolarizedLight]]
+    background_color = "#fcf4dc"
+    cursor_color = "#536870"
+    foreground_color = "#536870"
+    show_titlebar = False
+    scrollbar_position = hidden
+    scrollback_infinite = True
+    palette = "#002831:#d11c24:#738a05:#a57706:#2176c7:#c61c6f:#259286:#eae3cb:#001e27:#bd3613:#475b62:#536870:#708284:#5956ba:#819090:#fcf4dc"
+    use_system_font = False
+  [[SpaceGrayEightiesDull]]
+    background_color = "#222222"
+    cursor_color = "#bbbbbb"
+    foreground_color = "#c9c6bc"
+    show_titlebar = False
+    scrollbar_position = hidden
+    scrollback_infinite = True
+    palette = "#15171c:#b24a56:#92b477:#c6735a:#7c8fa5:#a5789e:#80cdcb:#b3b8c3:#555555:#ec5f67:#89e986:#fec254:#5486c0:#bf83c1:#58c2c1:#ffffff"
+    use_system_font = False
+  [[Spacedust]]
+    background_color = "#0a1e24"
+    cursor_color = "#708284"
+    foreground_color = "#ecf0c1"
+    show_titlebar = False
+    scrollbar_position = hidden
+    scrollback_infinite = True
+    palette = "#6e5346:#e35b00:#5cab96:#e3cd7b:#0f548b:#e35b00:#06afc7:#f0f1ce:#684c31:#ff8a3a:#aecab8:#ffc878:#67a0ce:#ff8a3a:#83a7b4:#fefff1"
+    use_system_font = False
+  [[Sundried]]
+    background_color = "#1a1818"
+    cursor_color = "#ffffff"
+    foreground_color = "#c9c9c9"
+    show_titlebar = False
+    scrollbar_position = hidden
+    scrollback_infinite = True
+    palette = "#302b2a:#a7463d:#587744:#9d602a:#485b98:#864651:#9c814f:#c9c9c9:#4d4e48:#aa000c:#128c21:#fc6a21:#7999f7:#fd8aa1:#fad484:#ffffff"
+    use_system_font = False
+  [[Teerb]]
+    background_color = "#262626"
+    cursor_color = "#e4c9af"
+    foreground_color = "#d0d0d0"
+    show_titlebar = False
+    scrollbar_position = hidden
+    scrollback_infinite = True
+    palette = "#1c1c1c:#d68686:#aed686:#d7af87:#86aed6:#d6aed6:#8adbb4:#d0d0d0:#1c1c1c:#d68686:#aed686:#e4c9af:#86aed6:#d6aed6:#b1e7dd:#efefef"
+    use_system_font = False
+  [[TomorrowNightEighties]]
+    background_color = "#2d2d2d"
+    cursor_color = "#cccccc"
+    foreground_color = "#cccccc"
+    show_titlebar = False
+    scrollbar_position = hidden
+    scrollback_infinite = True
+    palette = "#000000:#f2777a:#99cc99:#ffcc66:#6699cc:#cc99cc:#66cccc:#ffffff:#000000:#f2777a:#99cc99:#ffcc66:#6699cc:#cc99cc:#66cccc:#ffffff"
+    use_system_font = False
+  [[Treehouse]]
+    background_color = "#191919"
+    cursor_color = "#fac814"
+    foreground_color = "#786b53"
+    show_titlebar = False
+    scrollbar_position = hidden
+    scrollback_infinite = True
+    palette = "#321300:#b2270e:#44a900:#aa820c:#58859a:#97363d:#b25a1e:#786b53:#433626:#ed5d20:#55f238:#f2b732:#85cfed:#e14c5a:#f07d14:#ffc800"
+    use_system_font = False
+  [[Urple]]
+    background_color = "#1b1b23"
+    cursor_color = "#a063eb"
+    foreground_color = "#877a9b"
+    show_titlebar = False
+    scrollbar_position = hidden
+    scrollback_infinite = True
+    palette = "#000000:#b0425b:#37a415:#ad5c42:#564d9b:#6c3ca1:#808080:#87799c:#5d3225:#ff6388:#29e620:#f08161:#867aed:#a05eee:#eaeaea:#bfa3ff"
+    use_system_font = False
+  [[hemisudark]]
+    visible_bell = True
+    urgent_bell = True
+    background_color = "#fdf6e3"
+    background_darkness = 0.96
+    background_type = transparent
+    cursor_color = "#f596f2"
+    font = Noto Sans Mono CJK SC 11
+    foreground_color = "#657b83"
+    show_titlebar = False
+    scrollbar_position = hidden
+    scrollback_infinite = True
+    palette = "#444444:#ff0055:#b1d631:#ae9b72:#68bee4:#b577bc:#579a9f:#eeeeee:#777777:#d65e76:#bbffaa:#ecffc8:#9fd3e6:#e5c3e5:#b6e0e6:#ffffff"
+    use_system_font = False
+    copy_on_selection = True
+  [[YUM]]
+    background_color = "#1f1d45"
+    background_darkness = 0.95
+    background_type = transparent
+    cursor_color = "#f8dcc0"
+    font = Cascadia Mono 10
+    foreground_color = "#f8dcc0"
+    show_titlebar = False
+    scrollbar_position = hidden
+    scrollback_infinite = True
+    palette = "#050404:#bd0013:#4ab118:#e7741e:#0f4ac6:#665993:#70a598:#f8dcc0:#4e7cbf:#fc5f5a:#9eff6e:#efc11a:#1997c6:#9b5953:#c8faf4:#f6f5fb"
+    use_system_font = False
 [layouts]
   [[default]]
     [[[child1]]]
-      type = Terminal
       parent = window0
-      profile = solarized-dark
+      profile = yummy
+      type = Terminal
     [[[window0]]]
-      type = Window
       parent = ""
+      type = Window
 [plugins]
