--- a/.tmux/.tmux.conf
+++ b/.tmux/.tmux.conf
@@ -21,9 +21,6 @@ bind C-a send-prefix
 # reload config
 bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
 
-bind F7 set -g prefix C-b
-bind F8 set -g prefix `
-
 # rename terminals
 #set -g set-titles on
 set-option -g set-titles-string '#S:#I #(whoami)@#H #W'
@@ -32,28 +29,6 @@ set-option -g set-titles-string '#S:#I #(whoami)@#H #W'
 
 ## Keep windows around after they exit
 ##set -g remain-on-exit on
-
-# Some extra key bindings to select higher numbered windows
-bind F1 selectw -t:10
-bind F2 selectw -t:11
-bind F3 selectw -t:12
-bind F4 selectw -t:13
-bind F5 selectw -t:14
-bind F6 selectw -t:15
-bind F7 selectw -t:16
-bind F8 selectw -t:17
-bind F9 selectw -t:18
-bind F10 selectw -t:19
-bind F11 selectw -t:20
-bind F12 selectw -t:21
-
-# Bind function keys.
-bind -n F3 select-window -t 3
-bind -n F4 select-window -t 4
-bind -n F5 select-window -t 5
-bind -n F6 select-window -t 6
-bind -n F7 select-window -t 7
-bind -n F8 select-window -t 8
 
 #bind : command-prompt
 
@@ -125,7 +100,6 @@ set-window-option -g window-status-current-style bg=brightred
 #set-window-option -g window-status-current-style bg=bright,red
 %endif
 
-bind g select-window -l
 #TODO: to clear in bash VI mode
 
 # f           Prompt to search for text in open windows.
@@ -278,6 +252,12 @@ set -g repeat-time 1000
 # set-option -g status-utf8 on
 # default start/restart
 #select-window -t 1
+#bind -n F7 selectw -t 7
+#bind -n F7 select-window -t:7
+bind F7 set -g prefix C-b
+bind F8 set -g prefix `
+
+bind g select-window -l
 
 # gobust
 # revshell
