fcitx5: use rime for zh_hant

--- a/.config/fcitx5/conf/pinyin.conf
+++ b/.config/fcitx5/conf/pinyin.conf
@@ -9,7 +9,7 @@ EmojiEnabled=True
 # Enable Chaizi
 ChaiziEnabled=True
 # Enable Cloud Pinyin
-CloudPinyinEnabled=False
+CloudPinyinEnabled=True
 # Cloud Pinyin Index
 CloudPinyinIndex=2
 # Show preedit within application
